redis/test-dep.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: blog
spec:
  replicas: 1
  template:
    spec:
      containers:
      - env:
        image: rhan888/blog:latest
        imagePullPolicy: Always
        name: blog
        ports:
        - containerPort: 80
