redis/prp-redis-master.yaml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: redis-master
  labels:
    app: redis
spec:
  selector:
    matchLabels:
      app: redis
      role: master
      tier: backend
  replicas: 1
  template:
    metadata:
      labels:
        app: redis
        role: master
        tier: backend
    spec:
      containers:
      - name: master
        #image: k8s.gcr.io/redis:e2e  # or just 
        image: redis
        command: ["redis-server"]
        #args: ["--requirepass", "helloworld"]
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 6379

---
apiVersion: v1
kind: Service
metadata:
  name: redis-master
  labels:
    app: redis-master
spec:
  ports:
  - port: 6379
    targetPort: 6379
  selector:
    app: redis-master

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: redis-ing
spec:
  backend:
    serviceName: redis-master
    servicePort: 6379
  rules:
  - host: scidas-redis.nautilus.optiputer.net
    http:
      paths:
      - backend:
          serviceName: redis-master
          servicePort: 6379
